<resources>
    <string name="app_name">ToyStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

<!--    Nav bar-->
    <string name="menu">Menu</string>
    <string name="notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>

<!--    landing-->
    <string name="appName">WonderLands</string>
        <string name="image_description">Description of the image</string>
        <string name="shop_now">Shop Now</string>
    <string name="welcome">Welcome</string>
    <string name="welcome2">Get your favourite toys!</string>
    <string name="or">- OR -</string>
<!--    login -->
    <string name="welcomeBack">Welcome Back!</string>
    <string name="slogan">Yay! You\'re back! Thanks for shopping with us</string>
    <string name="login">LOG IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter your password</string>
    <string name="remember">Remember me</string>
<!--    register -->
    <string name="register">REGISTER</string>
    <string name="started">Get started with WonderLands</string>
    <string name="registerSlogan">Welcome to our store! Get your favorite toys</string>
    <string name="email">Email</string>
    <string name="emailAddress">Email Address</string>
    <string name="enterUserName">Enter your username</string>
    <string name="enterFullName">Enter your fullname</string>
</resources>